syntax = "proto3";

package tieba.addPost;

option java_package = "com.huanchengfly.tieba.post.api.models.protos.addPost";

import "AddPost/AddPostResponseData.proto";
import "Error.proto";

message AddPostResponse {
    Error error = 1;
    AddPostResponseData data = 2;
}
