syntax = "proto3";

package tieba;

option java_package = "com.huanchengfly.tieba.post.api.models.protos";

message Agree {
  int64 agreeNum = 1;
  int32 hasAgree = 2;
  int32 agreeType = 3;
  int64 disagreeNum = 4;
  int64 diffAgreeNum = 5;
}