syntax = "proto3";
import "FrsPage/SignInfo.proto";
import "FrsPage/Manager.proto";
import "FrsPage/Classify.proto";

package tieba.frsPage;

option java_package = "com.huanchengfly.tieba.post.api.models.protos.frsPage";

message ForumInfo {
  int64 id = 1;
  string name = 2;
  string first_class = 3;
  string second_class = 4;
  int32 is_exists = 5;
  int32 is_like = 6;
  int32 user_level = 7;
  string level_name = 8;
  int32 member_num = 9;
  int32 thread_num = 10;
  int32 post_num = 11;
  int32 has_frs_star = 12;
  int32 cur_score = 13;
  int32 levelup_score = 14;
  SignInfo sign_in_info = 15;
  repeated Manager managers = 17;
  string tids = 20;
  repeated Classify good_classify = 21;
  string avatar = 24;
  string slogan = 25;
  string f_share_img = 78;
  string forum_share_link = 79;
}